@@ -6,6 +6,11 @@
 
                                   Changelog
 
+Patrick M (25 October 2007)
+- Fixed test server to allow null bytes in binary posts.
+_ Added tests 35, 544 & 545 to check binary data posts, both static (in place)
+  and dynamic (copied).
+
 Daniel S (25 October 2007)
 - Michal Marek fixed the test script to be able to use valgrind even when the
   lib is built shared with libtool.
